# tangent-gtk

./: CMakeLists.txt  Dockerfile  apt-requirements-bionic.txt
cmake/: environment.cmake
tangent/gtkutil/: BUILD  CMakeLists.txt  colormap.cc  colormap.h  colormap_test.cc  eigencairo.h  eigencairo_impl.h  eigencairomm.h  eigencairomm_impl.h  gdkcairo.c  gdkcairo.h  gdkcairomm.cc  gdkcairomm.h  gen_extra_defs.cc  messages.proto  panzoom-base.ui  panzoom.ui  panzoom_test.py  panzoomarea.c  panzoomarea.h  panzoomdemo.cc  panzoomview.cc  panzoomview.h  protobuf_serialize.cc  protobuf_serialize.h  serialize.ui  serialize_test.py  serializedemo.cc  serializemodels.cc  serializemodels.h  tangent-gtk.xml  tangent.defs  tangent_methods.defs  tangent_signals.defs  tangent_vfuncs.defs
tangent/gtkutil/mm/: mm_notes.rst  panzoomarea.cc  panzoomarea.ccg  panzoomarea.h  panzoomarea.hg  panzoomdemo.cc  wrap_init.cc  wrap_init.h
tangent/gtkutil/mm/private/: hack.h  panzoomarea_p.h
